# social_network

./: .env.example  .flake8  .gitignore  README.md  database.sqlite  docker-compose.yaml  pyproject.toml
app/: add_tg_media.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: instagram.py  telegram.py  youtube.py
app/core/: config.py
app/crud/: telegram.py
app/db/: __init__.py  session.py
app/models/: telegram.py
app/schemas/: telegram.py  youtube.py
app/services/: instagram.py  telegram.py  youtube.py
instagram/: main.py  scheme.py
social/: pyproject.toml
social/app/: add_tg_media.py  main.py
social/app/api/api_v1/endpoints/: instagram.py  telegram.py
social/app/core/: config.py
social/app/crud/: telegram.py
social/app/db/: session.py
social/app/models/: telegram.py
social/app/schemas/: instagram.py  telegram.py
social/app/services/: telegram.py
