[tool.poetry]
name = "instagram"
version = "0.1.0"
description = ""
authors = ["Grigoriy <grigoriy.program@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
instaloader = "^4.9"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
fastapi = "^0.75.2"
python-dotenv = "^0.20.0"
cachetools = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
